// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results should render a <Results /> 1`] = `
<ul
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={
    Object {
      "backgroundColor": "#fff",
      "listStyleType": "none",
      "margin": 0,
      "padding": 0,
      "position": "absolute",
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <a
    href="https://google.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Google
  </a>
  <a
    href="https://dropbox.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Dropbox
  </a>
</ul>
`;

exports[`Results should render a <Results /> with a custom row renderer 1`] = `
<ul
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={
    Object {
      "backgroundColor": "#fff",
      "listStyleType": "none",
      "margin": 0,
      "padding": 0,
      "position": "absolute",
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <div>
    Title: 
    Google
  </div>
  <div>
    Title: 
    Dropbox
  </div>
</ul>
`;

exports[`Results should render a <Results /> with a max height 1`] = `
<ul
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={
    Object {
      "backgroundColor": "#fff",
      "borderBottomColor": "#eee",
      "borderBottomStyle": "solid",
      "borderBottomWidth": 1,
      "listStyleType": "none",
      "margin": 0,
      "maxHeight": 200,
      "overflow": "auto",
      "padding": 0,
      "position": "absolute",
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <a
    href="https://google.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Google
  </a>
  <a
    href="https://dropbox.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Dropbox
  </a>
</ul>
`;

exports[`Results should render a <Results /> with a row height 1`] = `
<ul
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={
    Object {
      "backgroundColor": "#fff",
      "borderBottomColor": "#eee",
      "borderBottomStyle": "solid",
      "borderBottomWidth": 1,
      "listStyleType": "none",
      "margin": 0,
      "maxHeight": 200,
      "overflow": "auto",
      "padding": 0,
      "position": "absolute",
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <a
    href="https://google.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Google
  </a>
  <a
    href="https://dropbox.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Dropbox
  </a>
</ul>
`;

exports[`Results should render a <Results /> with a selected item 1`] = `
<ul
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={
    Object {
      "backgroundColor": "#fff",
      "listStyleType": "none",
      "margin": 0,
      "padding": 0,
      "position": "absolute",
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <a
    href="https://google.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Google
  </a>
  <a
    href="https://dropbox.com"
    onClick={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ddd",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "borderTopWidth": 0,
        "boxSizing": "border-box",
        "color": "#000",
        "display": "block",
        "fontSize": 24,
        "height": 50,
        "lineHeight": "50px",
        "paddingLeft": 15,
        "paddingRight": 15,
        "textDecoration": "none",
      }
    }
  >
    Dropbox
  </a>
</ul>
`;
